--- a/era_slides_w03.tex
+++ b/era_slides_w03.tex
@@ -122,7 +122,6 @@
   \begin{itemize}
     \item Hauptspeicher = RAM, nicht Festplatten etc.
     \item Laden/speichern mittels lb/sb/lw/sw
-    \item Byte-Befehle laden in die unteren 8 Bit des Registers
     \item Register als Basisadresse + Offset
   \end{itemize}  
 \end{frame}
@@ -142,17 +141,12 @@
     \Large (Die ZÜ-Folien sind sehr gut, schaut euch die an)
   \end{center}
 \end{frame}
-\begin{frame}[c]{}{}
-  \begin{center}
-    \LARGE Quiz
-  \end{center}
-\end{frame}
 
 \begin{frame}[c]{Artemis-Hausaufgaben}{}
   \begin{itemize}
     \item H03 - Palindrom bis 12.11.2023 23:59 Uhr
     \item Speicheroperationen
-    \item lasst euch nicht vom Label 'hard' abschrecken, Prinzip ist sehr simpel
+    \item lasst euch nicht vom Label 'hard' abschrecken, das Prinzip ist sehr simpel
   \end{itemize}
 \end{frame}
 
