--- a/w03/era_slides_w03.tex
+++ b/w03/era_slides_w03.tex
@@ -110,14 +110,14 @@
 
 \begin{frame}[c]{Caller- und Callee-saved Register}{}
   \begin{figure}[h]
-  \includegraphics[height=0.75\textheight]{resources/w03_calling_conv_regs.png}
+  \includegraphics[height=0.75\textheight]{../resources/w03_calling_conv_regs.png}
   \caption{Übersicht über die RISC-V-Register}
   \end{figure}
 \end{frame}
 
 \begin{frame}[c]{Von-Neumann-Architektur}{}
   \begin{figure}[h]
-    \includegraphics[height=0.75\textheight]{resources/w03_von_Neumann.png}
+    \includegraphics[height=0.75\textheight]{../resources/w03_von_Neumann.png}
     \caption{Schematische Darstellung der von-Neumann-Architektur}
   \end{figure}
 \end{frame}
