--- a/era_slides_w05.tex
+++ b/era_slides_w05.tex
@@ -47,7 +47,7 @@
 \graphicspath{ {./resources/} }
 
 % presentation metadata
-\title{Übung 05: Boolsche Algebra und \\Kombinatorische Schaltungen}
+\title{Übung 05: Boolesche Algebra und \\kombinatorische Schaltungen}
 \subtitle{Einführung in die Rechnerarchitektur}
 \author{Niklas Ladurner}
 
