--- a/era_slides_w07.tex
+++ b/era_slides_w07.tex
@@ -148,7 +148,8 @@
   \begin{itemize}
     \item H07 - RISCV Single bis 10.12.2023 23:59 Uhr
     \item Erweiterung des RISC-V-Prozessors, mögliche Klausuraufgabe
-    \item 
+    \item bge und slli - ein Großteil der Logik ist schon implementiert
+    \item eigentliche Aufgabe mit wenigen Bauteilen/Verbindungen lösbar
   \end{itemize}
 \end{frame}
 
@@ -157,6 +158,7 @@
     \item Zulip: \href{https://zulip.in.tum.de/#narrow/stream/1917-ERA-Tutorium---Mi-1600-MI4}{\glqq ERA Tutorium - Mi-1600-MI4\grqq}
           bzw. \href{https://zulip.in.tum.de/#narrow/stream/1940-ERA-Tutorium---Fr-1100-MW2}{\glqq ERA Tutorium - Fr-1100-MW2\grqq}
     \item \href{https://github.com/logisim-evolution/logisim-evolution/releases}{Logisim Evolution}
+    \item \href{https://courses.edx.org/assets/courseware/v1/f06a2dc0c856f60ec0711e9f5e1c98cf/asset-v1:HarveyMuddX+ENGR85B+1T2023+type@asset+block/FinalReferences.pdf}{Referenztabellen (offizielle Tabellen sind auf den Übungblättern)}
   \end{itemize}
 \end{frame}
 
