--- a/era_slides_w08.tex
+++ b/era_slides_w08.tex
@@ -110,7 +110,7 @@
 \begin{frame}[fragile, c]{Endliche Automaten}{}
   \begin{itemize}
     \item Repräsentiert Funktion einer sequentiellen Schaltung (sequentiell: von Zuständen abhängig)
-    \item Mathematische Beschreibung als 5-Tupel $(I, S, s_0, d, O)$
+    \item Mathematische Beschreibung als 6-Tupel $(I, O, S, s_0, \delta, \lambda)$
     \item Als Diagramm: Zustände $\rightarrow$ Kreise, Übergänge $\rightarrow$ Verbindungen, Bedingungen $\rightarrow$ Kantenbeschriftungen
     \item One-Hot-Kodierung: Genau 1 FF ist auf 1 $\rightarrow$ aktueller Zustand, einfach aber verschwenderisch
     \item Binärkodierung: FFs zusammen bilden Binärzahl des aktuellen Zustands, spart FFs aber komplexer
