--- a/era_slides_w01.tex
+++ b/era_slides_w01.tex
@@ -37,6 +37,8 @@
 \usepackage{pmboxdraw}
 \usepackage{float}
 
+% image path
+\graphicspath{ {./resources/} }
 
 % presentation metadata
 \title{Übung 01: Zahlensysteme}
