--- a/era_slides_w02.tex
+++ b/era_slides_w02.tex
@@ -105,7 +105,7 @@
 
 \begin{frame}[c]{Abstraktionsebenen}{}
   \begin{figure}[h]
-  \includegraphics[width=\textwidth]{w02_hexdump}
+  \includegraphics[width=\textwidth]{w02_hexdump.png}
   \caption{Ausschnitt Hexdump eines C-Programms}
   \end{figure}
 \end{frame}
