--- a/gra/gra_slides_w01.tex
+++ b/gra/gra_slides_w01.tex
@@ -41,8 +41,8 @@
 \graphicspath{ {./resources/} }
 
 % presentation metadata
-\title{Übung 01: Zahlensysteme}
-\subtitle{Einführung in die Rechnerarchitektur}
+\title{Übung 01: Einführung in C}
+\subtitle{Grundlagenpraktikum Rechnerarchitektur}
 \author{Niklas Ladurner}
 
 \institute{\theChairName\\\theDepartmentName\\\theUniversityName}
@@ -91,7 +91,7 @@
 \begin{frame}[c]{}{}
   \begin{center}
     \LARGE  Keine Garantie für die Richtigkeit der Tutorfolien: Bei Unklarheiten/Unstimmigkeiten 
-    haben VL/ZÜ-Folien Recht!
+    haben VL-Folien Recht!
   \end{center}
 \end{frame}
 
@@ -99,38 +99,35 @@
   \begin{itemize}
     \item Wer bin ich?
     \item Wo könnt ihr mich erreichen?
-    \item Mitschriften/Folien auf meiner \href{https://home.in.tum.de/~ladu/}{Homepage} (?) 
+    \item Mitschriften/Folien auf meiner \href{https://home.in.tum.de/~ladu/}{Homepage} 
     \item Anmerkungen zu den Hausaufgaben/Übungen
     \item Tutoriumszeiten
+    \item Vertiefungen
+    \item Zulip hat eine Suchfunktion :)
   \end{itemize}
 \end{frame}
 
-\begin{frame}[c]{Was macht mein Rechner eigentlich?}{}
-    \begin{itemize}
-      \item Rechner arbeiten mit Zahlen: Bilder, Strings, ...
-      \item Dezimalsystem ungeeignet: zu viele 'Zustände' (Ziffern)
-      \item Strom an bzw. aus mittels Transistoren
-      \item zwei Zustände $\rightarrow$ Binärsystem
-      \item Oktalsystem und Hexadezimalsystem passen gut dazu!
-    \end{itemize}
-  \end{frame}
-
-  \begin{frame}[c]{Wie funktioniert denn so ein Zahlensystem?}{}
-      \begin{center}
-        \LARGE $$W=\sum_{i=0}^na_i\cdot B^i$$
-      \end{center}
-      \hspace{1cm}
-      \begin{itemize}
-        \item Was passiert bei einem Verschieben der Stellen nach links/rechts?
-        \item Wie kann man Binärzahlen in Hexadezimal/Oktal umwandeln?
-      \end{itemize}
-  \end{frame}
-
-\begin{frame}[c]{Wie rechnet man im Binärsystem?}{}
+\begin{frame}[c]{Artemis-Hausaufgaben}{}
   \begin{itemize}
-    \item grundsätzlich gleich wie im Dezimalsystem
-    \item Subtraktion: Addition mit negativer Zahl
-    \item Einerkomplement vs. Zweierkomplement
+    \item Zulassung zur Projektphase nur nach Sammeln von $\ge$ 50\%
+    der Punkte in den ersten 3 Wochen!
+    \item Notenbonus von 0.3, falls $\ge$ 75\% der Punkte erreicht
+    \item Bearbeitet ihr eine Aufgabe, werdet ihr automatisch zur Prüfung
+    angemeldet (nur relevant für 5.0X)
+    \item Bonuspunkte für besonders effiziente Implementierungen (Achtung: abhängig
+    vom Testserver können Ausführungszeiten abweichen)
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[c, fragile]{The C Programming Language}{}
+  \begin{itemize}
+  \item C ist eine Hochsprache, aber immer noch sehr hardwarenah
+  \item Wird mittels eines Compilers (bspw. \verb|gcc|) zu Assemblercode kompiliert
+  \item Includes werden in den Programmcode hineinkopiert (vgl. \verb|#ifndef ...|)
+  \item Stack vs. Heap: Wo \verb|malloc|, wo \verb|alloca|?
+  \item Größen von Datentypen \underline{implementierungsabhängig}
+  \item \verb|stdint.h| für fixed-width Typen
+  \item Für eine ausführliche Einführung siehe C-Primer (Link ganz am Ende)
   \end{itemize}
 \end{frame}
 
@@ -140,21 +137,13 @@
   \end{center}
 \end{frame}
 
-\begin{frame}[c]{Artemis-Hausaufgaben}{}
-  \begin{itemize}
-    \item H01-Zahlensysteme bis 29.10.2023 23:59 Uhr
-    \item 100\% bedeuten 100\% - keine \emph{hidden tests} nach der Deadline
-    \item kurze Einführung in Artemis/Git
-  \end{itemize}
-\end{frame}
-
 \begin{frame}[fragile, c]{Links}{}
   \begin{itemize}
-    \item Zulip: \href{https://zulip.in.tum.de/#narrow/stream/1917-ERA-Tutorium---Mi-1600-MI4}{\glqq ERA Tutorium - Mi-1600-MI4\grqq}
-    bzw. \href{https://zulip.in.tum.de/#narrow/stream/1940-ERA-Tutorium---Fr-1100-MW2}{\glqq ERA Tutorium - Fr-1100-MW2\grqq}
-    \item \href{https://www.moodle.tum.de/course/view.php?id=90679}{ERA-Moodle-Kurs}
-    \item \href{https://artemis.in.tum.de/courses/288/exercises}{ERA-Artemis-Kurs}
+    \item Zulip: \href{https://zulip.in.tum.de/#narrow/stream/2267-GRA-Tutorium---Gruppe-20}{\glqq GRA Tutorium - Gruppe 20\grqq}
+    bzw. \href{https://zulip.in.tum.de/#narrow/stream/2269-GRA-Tutorium---Gruppe-22}{\glqq GRA Tutorium - Gruppe 22\grqq}
+    \item \href{https://artemis.in.tum.de/courses/329}{GRA-Artemis-Kurs}
     \item \href{https://git-scm.com/docs/gittutorial}{Git-Tutorial}, \href{https://rogerdudler.github.io/git-guide/}{alternatives Tutorial}
+    \item \href{https://www.sec.in.tum.de/i20/assets/vorlesung/c_primer.pdf}{C-Primer von Jonas Pfoh}
   \end{itemize}
 \end{frame}
 
