--- a/era/era_slides_w14.tex
+++ b/era/era_slides_w14.tex
@@ -122,7 +122,7 @@
 
 \begin{frame}[fragile, c]{Statistik zur Endterm WS 22/23}{}
   \begin{tikzpicture}[remember picture,overlay]
-    \node[inner sep=0pt, outer sep=40pt, anchor=north west] at ([xshift=-1cm]current page.north west) {\includegraphics[height=0.85\textheight]{w14_endterm.png}};
+    \node[inner sep=0pt, outer sep=40pt, anchor=north west] at ([xshift=-1cm, yshift=-6cm]current page.north west) {\includegraphics[height=0.85\textheight]{w14_endterm.png}};
   \end{tikzpicture}
 
   \begin{columns}[c]
@@ -142,7 +142,7 @@
 
 \begin{frame}[fragile, c]{Statistik zur Retake WS 22/23}{}
   \begin{tikzpicture}[remember picture,overlay]
-    \node[inner sep=0pt, outer sep=40pt, anchor=north west] at ([xshift=-1cm]current page.north west) {\includegraphics[height=0.85\textheight]{w14_retake.png}};
+    \node[inner sep=0pt, outer sep=40pt, anchor=north west] at ([xshift=-1cm, yshift=-6cm]current page.north west) {\includegraphics[height=0.85\textheight]{w14_retake.png}};
   \end{tikzpicture}
 
   \begin{columns}[c]
