--- a/era2/era2_slides_w01.tex
+++ b/era2/era2_slides_w01.tex
@@ -38,6 +38,7 @@
 \usepackage{float}
 \usepackage{babel}[ngerman]
 \usepackage{csquotes}[autostyle]
+\usepackage[useregional]{datetime2}
 
 % image path
 \graphicspath{ {./resources/} }
@@ -48,7 +49,7 @@
 \author{Niklas Ladurner}
 
 \institute{\theChairName\\\theDepartmentName\\\theUniversityName}
-\date[\today]{\today}
+\date{\DTMdisplaydate{2024}{10}{18}{-1}}
 
 \footline{\insertauthor~|~\insertshorttitle~|~\insertshortdate}
 
